--- a/assets/global.css
+++ b/assets/global.css
@@ -1,3 +1,85 @@
 a {
   text-decoration: none;
 }
+
+* {
+  align-content: center;
+}
+
+@font-face {
+  font-family: 'Noto Sans KR', sans-serif;
+  unicode-range: U+AC00- U+D7A3;
+  src: url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700;900&display=swap');
+}
+
+.main1_title {
+  font-size: 30px;
+  display: inline-block;
+}
+
+.main1_container {
+  width: 100%;
+  height: 400px;
+}
+.main2_container {
+  width: 100%;
+  height: fit-content;
+  padding-bottom: 30px;
+}
+.main3_container {
+  width: 100%;
+  height: 500px;
+}
+.main4_container {
+  width: 100%;
+  height: 500px;
+}
+.main5_container {
+  width: 100%;
+  height: 500px;
+}
+.main1_title {
+  font-weight: 700;
+  display: flex;
+  white-space: nowrap;
+}
+.main1_title_1 {
+  font-size: 36px;
+}
+
+.main1_title_2 {
+  font-size: 24px;
+}
+.main2_card {
+  height: 600px;
+}
+
+@media screen and (max-width: 600px) {
+  .main2_card {
+    height: fit-content;
+    padding-bottom: 20px;
+  }
+}
+
+.skills_container {
+  width: 100%;
+  height: fit-content;
+  padding: 30px 0;
+}
+.mainToPage-enter-active,
+.mainToPage-leave-active {
+  transition: opacity 0.5s;
+}
+.mainToPage-enter, .mainToPage-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
+.fadeOut-leave-from {
+  opacity: 1;
+}
+
+.fadeOut-leave-active {
+  transition: 0.5s;
+}
+.fadeOut-leave-to {
+  opacity: 0;
+}
