--- a/assets/global.css
+++ b/assets/global.css
@@ -21,23 +21,12 @@ a {
   width: 100%;
   height: 400px;
 }
-.main2_container {
+.fit_container {
   width: 100%;
   height: fit-content;
   padding-bottom: 30px;
 }
-.main3_container {
-  width: 100%;
-  height: 500px;
-}
-.main4_container {
-  width: 100%;
-  height: 500px;
-}
-.main5_container {
-  width: 100%;
-  height: 500px;
-}
+
 .main1_title {
   font-weight: 700;
   display: flex;
@@ -61,11 +50,6 @@ a {
   }
 }
 
-.skills_container {
-  width: 100%;
-  height: fit-content;
-  padding: 30px 0;
-}
 .mainToPage-enter-active,
 .mainToPage-leave-active {
   transition: opacity 0.5s;
